<resources>
    <string name="app_name">PlaceHolder</string>
    <string name="log_in">Log in</string>

    <string name="my_rooms">My Rooms</string>
    <string name="screen_title_root">My Rooms</string>
    <string name="user_name_hint">username</string>
    <string name="user_name_tag">User</string>
    <string name="password_tag">Password</string>
    <string name="password_hint">password</string>

    <string name="message_received">The item you added:</string>
    <string name="enter_item_text">Enter Your Item Here</string>
    <string name="register_button">REGISTER</string>
    <string name="register_text">Need an account?</string>
    <string name="log_in_text">Already have an account?</string>
    <string name="continue_text">Continue</string>

    <string name="log_out">Log out</string>
    <string name="search">Search</string>
    <string name="add_new">Add new</string>
    <string name="required">Required</string>

    <string name="settings">Settings</string>
    <string name="object_location">Location</string>
    <string name="account">Account</string>
    <string name="about">About</string>
    <string name="description">Description</string>
    <string name="icon_for_item">Icon for item</string>
    <string name="email_tag">Email</string>
    <string name="skip_button">Skip</string>
    <string name="skip_text">Or try it without logging in:</string>

    <string name="action_add">Add New</string>
    <string name="action_remove">Remove</string>

    <string name="item_name">Name</string>
    <string name="cancel_button">Cancel</string>
    <string name="action_settings">Settings</string>
    <string name="user_profile">Profile</string>
    <string name="home">Home</string>
    <string name="details_location">Location:</string>
    <string name="details_description">Description:</string>

    <string name="item_description">Description</string>
    <string name="register_title">Register</string>

    <string name="google_token" translatable="false">727364686482-009h8jlk4c5u4etqujmjqh55pj569lp5.apps.googleusercontent.com</string>

    <string name="facebook_app_id" translatable="false">2548016512147265</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb2548016512147265</string>

</resources>
